--- a/devtools/conda-envs/environment.yml
+++ b/devtools/conda-envs/environment.yml
@@ -12,5 +12,8 @@ dependencies:
   - matplotlib
   - pandas
   - scikit-learn
+  - rdkit
+  - torch-cpu
   pip:
-    - tensorflow-gpu
+    - tensorflow
+    - nibabel
